[gd_scene load_steps=21 format=3 uid="uid://bl41ojftgaasi"]

[ext_resource type="Script" uid="uid://d0sey2toloue4" path="res://scenes/ui/ability_upgrade_card.gd" id="1_8ur3e"]
[ext_resource type="PackedScene" uid="uid://cwhgsnaf8toe7" path="res://scenes/ui/random_stream_player_component.tscn" id="2_xicjk"]
[ext_resource type="AudioStream" uid="uid://beb3wdd6p7kvv" path="res://assets/audio/switch1.ogg" id="3_ksxgh"]
[ext_resource type="AudioStream" uid="uid://c24cpk6lqxg23" path="res://assets/audio/switch2.ogg" id="4_g40w5"]
[ext_resource type="AudioStream" uid="uid://ckt5qwucuroj2" path="res://assets/audio/switch3.ogg" id="5_wv0wr"]
[ext_resource type="AudioStream" uid="uid://bextdthxl6j2k" path="res://assets/audio/switch4.ogg" id="6_puu13"]
[ext_resource type="AudioStream" uid="uid://bgj05p03mf5td" path="res://assets/audio/switch5.ogg" id="7_kt4ni"]
[ext_resource type="AudioStream" uid="uid://b7wjeld7epqul" path="res://assets/audio/switch6.ogg" id="8_r6bay"]
[ext_resource type="AudioStream" uid="uid://bcgbcfn0kfj1f" path="res://assets/audio/switch7.ogg" id="9_ut4pq"]
[ext_resource type="AudioStream" uid="uid://crbb7r3nctgna" path="res://assets/audio/switch8.ogg" id="10_m713t"]
[ext_resource type="AudioStream" uid="uid://cf6yiybpup5eb" path="res://assets/audio/switch9.ogg" id="11_gnty3"]
[ext_resource type="AudioStream" uid="uid://6wvoypqsxmeh" path="res://assets/audio/switch10.ogg" id="12_vel0p"]

[sub_resource type="Animation" id="Animation_m44y0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_jntrk"]
resource_name = "discard"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8ur3e"]
resource_name = "in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rxqlh"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 3.03143, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickPlayerComponent2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4j7u"]
_data = {
&"RESET": SubResource("Animation_m44y0"),
&"discard": SubResource("Animation_jntrk"),
&"in": SubResource("Animation_8ur3e"),
&"selected": SubResource("Animation_rxqlh")
}

[sub_resource type="Animation" id="Animation_uhqci"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_c4j7u"]
resource_name = "hover"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverPlayerComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxqlh"]
_data = {
&"RESET": SubResource("Animation_uhqci"),
&"hover": SubResource("Animation_c4j7u")
}

[node name="AbilityUpgradeCard" type="PanelContainer" groups=["upgrade_card"]]
custom_minimum_size = Vector2(120, 150)
pivot_offset = Vector2(60, 75)
script = ExtResource("1_8ur3e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c4j7u")
}

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rxqlh")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLable" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 16
text = "name"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="Description_Lable" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
text = "aas
"
autowrap_mode = 2

[node name="HoverPlayerComponent" parent="." instance=ExtResource("2_xicjk")]
volume_db = -8.0
streams = Array[AudioStream]([ExtResource("3_ksxgh"), ExtResource("4_g40w5"), ExtResource("5_wv0wr"), ExtResource("6_puu13"), ExtResource("7_kt4ni"), ExtResource("8_r6bay"), ExtResource("9_ut4pq"), ExtResource("10_m713t"), ExtResource("11_gnty3"), ExtResource("12_vel0p")])

[node name="ClickPlayerComponent2" parent="." instance=ExtResource("2_xicjk")]
streams = Array[AudioStream]([ExtResource("3_ksxgh"), ExtResource("4_g40w5"), ExtResource("5_wv0wr"), ExtResource("6_puu13"), ExtResource("7_kt4ni"), ExtResource("8_r6bay"), ExtResource("9_ut4pq"), ExtResource("10_m713t"), ExtResource("11_gnty3"), ExtResource("12_vel0p")])

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
